# lesson_drf

./: README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
users/migrations/: 0001_initial.py
vehicle/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car_alter_milage_moto.py  0005_car_owner_moto_owner.py  0006_car_amount.py  0007_remove_car_amount_car_price_moto_price.py
