[tool.poetry]
name = "lesson-drf"
version = "0.1.0"
description = ""
authors = ["Viktor Nikulaev <viktor_1611@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
black = "^24.10.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
